--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
   "engines": {
     "node": ">=14.17.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@chakra-ui/react": "^2.2.6",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "framer-motion": "^7.0.2"
+  },
   "devDependencies": {
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
