--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@chakra-ui/react": "^2.2.6",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
-    "framer-motion": "^7.0.2"
+    "framer-motion": "^7.0.2",
+    "github-markdown-css": "^5.1.0",
+    "react-markdown": "^8.0.3",
+    "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
