--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "electron-vite-react",
-  "productName": "Electron",
+  "name": "markdown-editor",
+  "productName": "Makda Editor",
   "private": true,
-  "version": "2.0.0",
-  "description": "Vite React Electron boilerplate.",
-  "author": "草鞋没号 <308487730@qq.com>",
+  "version": "1.0.0",
+  "description": "markdown editor by electron",
+  "author": "ryooftheryo <ryo.of.the.ryo@gmail.com>",
   "license": "MIT",
   "main": "dist/electron/main/index.js",
   "scripts": {
