--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "electron-builder": "^23.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rollup-plugin-visualizer": "^5.7.1",
     "sass": "^1.53.0",
     "typescript": "^4.7.4",
     "vite": "^3.0.2",
